# uvms_bimanual_sim

./: README.md
rexrov_dual_oberon/oberon7_lite/: CMakeLists.txt  package.xml
rexrov_dual_oberon/oberon7_lite/robots/: oberon7_lite.xacro
rexrov_dual_oberon/oberon7_lite/urdf/: parallel_gripper.xacro  parallel_gripper_lite.xacro  parallel_gripper_lite_backup.xacro  serial_arm.gazebo.xacro  serial_arm_lite.gazebo.xacro  serial_arm_lite.xacro
rexrov_dual_oberon/rexrov_dual_oberon_control/: CMakeLists.txt  package.xml
rexrov_dual_oberon/rexrov_dual_oberon_description/: CMakeLists.txt  package.xml  urdf.rviz  urdf2.rviz
rexrov_dual_oberon/rexrov_dual_oberon_description/launch/: display.launch  dual_display.launch  rexrov_world.launch  upload_dual_rexrov_oberon7.launch  upload_rexrov_lite.launch
rexrov_dual_oberon/rexrov_dual_oberon_description/meshes/: Base.stl  Forearm.stl  (+2 more)
rexrov_triple_oberon/rexrov_triple_oberon_control/: CMakeLists.txt  package.xml
rexrov_triple_oberon/rexrov_triple_oberon_control/src/config/: inertial_lite.yaml  joint_control_triple.yaml
rexrov_triple_oberon/rexrov_triple_oberon_control/src/launch/: dp_controller.launch  haptic_control.launch  haptic_control_lite.launch  joy_velocity.launch  joy_velocity_lite.launch  manipulator_joint_control_triple.launch
rexrov_triple_oberon/rexrov_triple_oberon_control/src/scripts/: effort_controller.py  gripper_pub.py  manipulator_publisher.py  position_stabilize.py  vehicle_pose.py  velocity_stabilize.py
rexrov_triple_oberon/rexrov_triple_oberon_description/: CMakeLists.txt  package.xml
(+50 files in other folders)
